100% coverage on ArrayMethods